.k3s/otel.collector.otlp.v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: default
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:latest
          command: ['/otelcol-contrib']
          args: ['--config=/conf/otel-collector-config.yaml']
          volumeMounts:
            - name: config-volume
              mountPath: /conf
          ports:
          - name:  otlp
            containerPort: 4317
          - name:  otlp-http
            containerPort: 4318
      volumes:
        - name: config-volume
          configMap:
            name: otel-collector-conf
      serviceAccountName: otel-collector
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: default
  labels:
    app: otel-collector
spec:
  type: ClusterIP
  ports:
    - name: otlp
      port: 4317
    - name: otlp-http
      port: 4318
  selector:
    app: otel-collector
  internalTrafficPolicy: Cluster
