.k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rsse-app-service
  name: rsse-app-service
  namespace: default
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: rsse-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
