.k3s/ingress.traefik.ip.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsse-app-ingress-http
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: rsse-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
---
